-- ============================================================
-- GESTÃO DE MEIOS DE CONTROLO - QUA_MC
-- Migrado de: GESTÃO DE MEIOS DE CONTROLO_23-01-2026.accdb
-- ============================================================

-- ============================================================
-- TABELAS DICIONÁRIO
-- ============================================================

CREATE TABLE QUA_MC_DIC_SECCOES (
    ID_SECCAO           INT IDENTITY(1,1) PRIMARY KEY,
    LOCAL_SECCAO        NVARCHAR(255),
    UTZ_CRIA            INT, DATA_CRIA   DATE,
    UTZ_MODIF           INT, DATA_MODIF  DATE,
    UTZ_ANULA           INT, DATA_ANULA  DATE,
    ATIVO               BIT DEFAULT 1
);

CREATE TABLE QUA_MC_DIC_RESP_VALIDACAO (
    ID_RESP_VALIDACAO   INT IDENTITY(1,1) PRIMARY KEY,
    RESP_VALIDACAO      NVARCHAR(255),
    DEPARTAMENTO        NVARCHAR(255),
    UTZ_CRIA            INT, DATA_CRIA   DATE,
    UTZ_MODIF           INT, DATA_MODIF  DATE,
    UTZ_ANULA           INT, DATA_ANULA  DATE,
    ATIVO               BIT DEFAULT 1
);

CREATE TABLE QUA_MC_DIC_TIPO_CALIBRACAO (
    ID_TIPO_CALIBRACAO  INT IDENTITY(1,1) PRIMARY KEY,
    TIPO_CALIB_EQUP     NVARCHAR(100),
    UTZ_CRIA            INT, DATA_CRIA   DATE,
    UTZ_MODIF           INT, DATA_MODIF  DATE,
    UTZ_ANULA           INT, DATA_ANULA  DATE,
    ATIVO               BIT DEFAULT 1
);

CREATE TABLE QUA_MC_DIC_TIPO_ACEITACAO (
    ID_TIPO_ACEITACAO       INT IDENTITY(1,1) PRIMARY KEY,
    TIPO_ACEIT_CALIB_EQUIP  NVARCHAR(100),
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_DIC_TIPO_VERIF_GABARIT (
    ID_TIPO_VERIF_GABARIT   INT IDENTITY(1,1) PRIMARY KEY,
    TIPO_VERIF_GABARIT      NVARCHAR(100),
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_DIC_RESULTADO_VALIDACAO (
    ID_RESULTADO_VALIDACAO  INT IDENTITY(1,1) PRIMARY KEY,
    RESULTADO_VALIDACAO     NVARCHAR(100),
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_DIC_PECAS_CROMADAS (
    ID_PECA_CROMADA     INT IDENTITY(1,1) PRIMARY KEY,
    REFERENCIA          NVARCHAR(100),
    DESIGNACAO          NVARCHAR(255),
    UTZ_CRIA            INT, DATA_CRIA   DATE,
    UTZ_MODIF           INT, DATA_MODIF  DATE,
    UTZ_ANULA           INT, DATA_ANULA  DATE,
    ATIVO               BIT DEFAULT 1
);

-- ============================================================
-- ENTIDADES DE CALIBRAÇÃO EXTERNA
-- ============================================================

CREATE TABLE QUA_MC_ENTIDADES_CALIBRACAO (
    ID_ENTIDADE_CALIBRACAO  INT IDENTITY(1,1) PRIMARY KEY,
    NOME_ENTIDADE           NVARCHAR(255),
    ABREVIATURA             NVARCHAR(50),
    MORADA                  NVARCHAR(500),
    TELEFONE                NVARCHAR(50),
    FAX                     NVARCHAR(50),
    EMAIL                   NVARCHAR(255),
    TECNICO                 NVARCHAR(255),
    OBSERVACOES             NVARCHAR(MAX),
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_ENTIDADES_CALIBRACAO_CERTIF (
    ID_CERTIF               INT IDENTITY(1,1) PRIMARY KEY,
    ID_ENTIDADE_CALIBRACAO  INT NOT NULL REFERENCES QUA_MC_ENTIDADES_CALIBRACAO(ID_ENTIDADE_CALIBRACAO),
    NUM                     INT,
    DATA_CERTIF             DATE,
    NUM_CERTIF              NVARCHAR(100),
    CERTIFICADO             NVARCHAR(500),
    TIPO_ENSAIO             NVARCHAR(255),
    VALIDADE                DATE,
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

-- ============================================================
-- EQUIPAMENTOS
-- ============================================================

CREATE TABLE QUA_MC_EQUIPAMENTOS (
    ID_EQUIPAMENTO          INT IDENTITY(1,1) PRIMARY KEY,
    DESIGNACAO              NVARCHAR(255),
    COD_INTERNO             NVARCHAR(100),
    N_SERIE                 NVARCHAR(100),
    MODELO                  NVARCHAR(255),
    FABRICANTE              NVARCHAR(255),
    FORNECEDOR              NVARCHAR(255),
    FUNCAO                  NVARCHAR(500),
    DATA_AQUISICAO          DATE,
    ID_SECCAO               INT REFERENCES QUA_MC_DIC_SECCOES(ID_SECCAO),
    ID_RESP_ENTRADA         INT REFERENCES QUA_MC_DIC_RESP_VALIDACAO(ID_RESP_VALIDACAO),
    CALIBRACAO_SIM          BIT DEFAULT 0,
    CALIBRACAO_NAO          BIT DEFAULT 0,
    CALIBR_INTERNA          BIT DEFAULT 0,
    CALIBR_EXTERNA          BIT DEFAULT 0,
    INTERCALIB_INT_MESES    INT,
    INTERCALIB_EXT_MESES    INT,
    ESTUDOS_R_R             BIT DEFAULT 0,
    FREQ_ESTUDO_R_R         SMALLINT,
    EM_UTILIZACAO           BIT DEFAULT 1,
    OBSOLETO                BIT DEFAULT 0,
    OBSERVACOES             NVARCHAR(MAX),
    ERRO                    NVARCHAR(255),
    GAMA_UTILIZACAO         NVARCHAR(255),
    NORMAS                  NVARCHAR(500),
    IMAGEM_IT_OPERACIONAL   NVARCHAR(500),
    FOTO                    NVARCHAR(500),
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_MOV_CALIB_EQUIP (
    ID_CALIB_EQUIP          INT IDENTITY(1,1) PRIMARY KEY,
    ID_EQUIPAMENTO          INT NOT NULL REFERENCES QUA_MC_EQUIPAMENTOS(ID_EQUIPAMENTO),
    IT_METODO_OPERACIONAL   NVARCHAR(500),
    IT_CALIBRACAO           NVARCHAR(500),
    IT_VERIFICACAO_INTERNA  NVARCHAR(500),
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_MOV_CALIB_EQUIP_DET (
    ID_CALIB_EQUIP_DET          INT IDENTITY(1,1) PRIMARY KEY,
    ID_CALIB_EQUIP              INT NOT NULL REFERENCES QUA_MC_MOV_CALIB_EQUIP(ID_CALIB_EQUIP),
    NUM                         INT,
    ID_TIPO_CALIBRACAO          INT REFERENCES QUA_MC_DIC_TIPO_CALIBRACAO(ID_TIPO_CALIBRACAO),
    ID_TIPO_ACEITACAO           INT REFERENCES QUA_MC_DIC_TIPO_ACEITACAO(ID_TIPO_ACEITACAO),
    NUM_CERTIF_EXTERNO          NVARCHAR(100),
    ANEXO_CERTIF_EXTERNO        NVARCHAR(500),
    ID_ENTIDADE_CALIBRACAO      INT REFERENCES QUA_MC_ENTIDADES_CALIBRACAO(ID_ENTIDADE_CALIBRACAO),
    DATA_CALIBRACAO             DATE,
    VALIDADE_CALIBRACAO         NVARCHAR(100),
    NUM_VALIDADE_CALIBRACAO     NVARCHAR(100),
    ID_RESP_VALIDACAO           INT REFERENCES QUA_MC_DIC_RESP_VALIDACAO(ID_RESP_VALIDACAO),
    ID_RESULTADO_VALIDACAO      INT REFERENCES QUA_MC_DIC_RESULTADO_VALIDACAO(ID_RESULTADO_VALIDACAO),
    PERIODO_INTERCALIB_ANTERIOR NVARCHAR(100),
    OBSERVACOES                 NVARCHAR(MAX),
    UTZ_CRIA                    INT, DATA_CRIA   DATE,
    UTZ_MODIF                   INT, DATA_MODIF  DATE,
    UTZ_ANULA                   INT, DATA_ANULA  DATE,
    ATIVO                       BIT DEFAULT 1
);

-- ============================================================
-- GABARITOS
-- ============================================================

CREATE TABLE QUA_MC_GABARITOS (
    ID_GABARITO             INT IDENTITY(1,1) PRIMARY KEY,
    NOME_GABARITO           NVARCHAR(255),
    CODIGO_GABARITO         NVARCHAR(100),
    COD_DESENHO_TECNICO     NVARCHAR(100),
    REFERENCIA              INT,
    ID_SECCAO               INT REFERENCES QUA_MC_DIC_SECCOES(ID_SECCAO),
    DATA_ENTRADA            DATE,
    ID_RESP_ENTRADA         INT REFERENCES QUA_MC_DIC_RESP_VALIDACAO(ID_RESP_VALIDACAO),
    EM_UTILIZACAO           BIT DEFAULT 1,
    OBSOLETO                BIT DEFAULT 0,
    OBSERVACOES             NVARCHAR(MAX),
    FOTOGRAFIA              NVARCHAR(500),
    G_DIMENSIONAL           BIT DEFAULT 0,
    G_CONTROLO              BIT DEFAULT 0,
    G_ISOSTATICO            BIT DEFAULT 0,
    FREQ_VERIFICACAO_MESES  INT,
    TOLERANCIA              DECIMAL(18,4),
    UNID_MEDIDA_TOLERANCIA  NVARCHAR(50),
    JAN BIT DEFAULT 0, FEV BIT DEFAULT 0, MAR BIT DEFAULT 0,
    ABR BIT DEFAULT 0, MAI BIT DEFAULT 0, JUN BIT DEFAULT 0,
    JUL BIT DEFAULT 0, AGO BIT DEFAULT 0, [SET] BIT DEFAULT 0,
    [OUT] BIT DEFAULT 0, NOV BIT DEFAULT 0, DEZ BIT DEFAULT 0,
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_MOV_VERIF_GABARITO (
    ID_VERIF_GABARITO       INT IDENTITY(1,1) PRIMARY KEY,
    ID_GABARITO             INT NOT NULL REFERENCES QUA_MC_GABARITOS(ID_GABARITO),
    NUM                     INT,
    DATA_VERIFICACAO        DATE,
    NUM_VERIFICACAO         NVARCHAR(100),
    REL_VERIFICACAO         NVARCHAR(500),
    ID_RESP_VERIFICACAO     INT REFERENCES QUA_MC_DIC_RESP_VALIDACAO(ID_RESP_VALIDACAO),
    PERIODO_INTERCALIB      SMALLINT,
    ID_TIPO_VERIF_GABARIT   INT REFERENCES QUA_MC_DIC_TIPO_VERIF_GABARIT(ID_TIPO_VERIF_GABARIT),
    ID_TIPO_ACEITACAO       INT REFERENCES QUA_MC_DIC_TIPO_ACEITACAO(ID_TIPO_ACEITACAO),
    PERC_R_R                FLOAT,
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_MOV_VERIF_INT_GABARITO (
    ID_VERIF_INT_GABARITO   INT IDENTITY(1,1) PRIMARY KEY,
    ID_VERIF_GABARITO       INT NOT NULL REFERENCES QUA_MC_MOV_VERIF_GABARITO(ID_VERIF_GABARITO),
    NUM_MEDIDA              INT,
    TIPO_MEDIDA             INT,
    VALOR                   DECIMAL(18,4),
    UNIDADES                NVARCHAR(50),
    TOLERANCIA              DECIMAL(18,4),
    REF_SUBFORM             DECIMAL(18,4),
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

-- ============================================================
-- MÁQUINAS
-- ============================================================

CREATE TABLE QUA_MC_MAQUINAS (
    ID_MAQUINA              INT IDENTITY(1,1) PRIMARY KEY,
    DESIGNACAO              NVARCHAR(255),
    NUM_MAQUINA             NVARCHAR(100),
    ID_SECCAO               INT REFERENCES QUA_MC_DIC_SECCOES(ID_SECCAO),
    PARAMETROS              NVARCHAR(500),
    TOLERANCIA              NVARCHAR(100),
    FREQ_VERIFICACAO        INT,
    REL_ANEXO               NVARCHAR(500),
    VALOR_EXIGIDO           NVARCHAR(255),
    JAN BIT DEFAULT 0, FEV BIT DEFAULT 0, MAR BIT DEFAULT 0,
    ABR BIT DEFAULT 0, MAI BIT DEFAULT 0, JUN BIT DEFAULT 0,
    JUL BIT DEFAULT 0, AGO BIT DEFAULT 0, [SET] BIT DEFAULT 0,
    [OUT] BIT DEFAULT 0, NOV BIT DEFAULT 0, DEZ BIT DEFAULT 0,
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_MOV_VERIF_MAQUINA (
    ID_VERIF_MAQUINA        INT IDENTITY(1,1) PRIMARY KEY,
    ID_MAQUINA              INT NOT NULL REFERENCES QUA_MC_MAQUINAS(ID_MAQUINA),
    NUM                     INT,
    DATA_VERIFICACAO        DATE,
    ID_TIPO_VERIFICACAO     INT,
    NUM_VERIFICACAO         NVARCHAR(100),
    REL_VERIFICACAO         NVARCHAR(500),
    FREQUENCIA              INT,
    ID_RESP_VERIFICACAO     INT REFERENCES QUA_MC_DIC_RESP_VALIDACAO(ID_RESP_VALIDACAO),
    ID_TIPO_ACEITACAO       INT REFERENCES QUA_MC_DIC_TIPO_ACEITACAO(ID_TIPO_ACEITACAO),
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

-- ============================================================
-- SALAS / SECÇÕES
-- ============================================================

CREATE TABLE QUA_MC_SALAS (
    ID_SALA                 INT IDENTITY(1,1) PRIMARY KEY,
    DESIGNACAO_ESPACO       NVARCHAR(255),
    ID_SECCAO               INT REFERENCES QUA_MC_DIC_SECCOES(ID_SECCAO),
    PARAMETROS              NVARCHAR(500),
    RESULTADOS_EXIGIDOS     NVARCHAR(255),
    OBSERVACOES             NVARCHAR(MAX),
    FREQ_TEORICA            NVARCHAR(100),
    JAN BIT DEFAULT 0, FEV BIT DEFAULT 0, MAR BIT DEFAULT 0,
    ABR BIT DEFAULT 0, MAI BIT DEFAULT 0, JUN BIT DEFAULT 0,
    JUL BIT DEFAULT 0, AGO BIT DEFAULT 0, [SET] BIT DEFAULT 0,
    [OUT] BIT DEFAULT 0, NOV BIT DEFAULT 0, DEZ BIT DEFAULT 0,
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

CREATE TABLE QUA_MC_MOV_VERIF_SALA (
    ID_VERIF_SALA           INT IDENTITY(1,1) PRIMARY KEY,
    ID_SALA                 INT NOT NULL REFERENCES QUA_MC_SALAS(ID_SALA),
    NUM                     INT,
    DATA_VERIFICACAO        DATE,
    ID_TIPO_VERIFICACAO     INT,
    NUM_VERIFICACAO         NVARCHAR(100),
    REL_ANEXO               NVARCHAR(500),
    FREQ_VERIFICACAO        NVARCHAR(100),
    ID_RESP_VERIFICACAO     INT REFERENCES QUA_MC_DIC_RESP_VALIDACAO(ID_RESP_VALIDACAO),
    ID_TIPO_ACEITACAO       INT REFERENCES QUA_MC_DIC_TIPO_ACEITACAO(ID_TIPO_ACEITACAO),
    UTZ_CRIA                INT, DATA_CRIA   DATE,
    UTZ_MODIF               INT, DATA_MODIF  DATE,
    UTZ_ANULA               INT, DATA_ANULA  DATE,
    ATIVO                   BIT DEFAULT 1
);

-- Alargar colunas que podem ter conteúdo longo em QUA_MC_EQUIPAMENTOS
ALTER TABLE QUA_MC_EQUIPAMENTOS ALTER COLUMN ERRO               NVARCHAR(MAX);
ALTER TABLE QUA_MC_EQUIPAMENTOS ALTER COLUMN GAMA_UTILIZACAO    NVARCHAR(MAX);
ALTER TABLE QUA_MC_EQUIPAMENTOS ALTER COLUMN NORMAS             NVARCHAR(MAX);
ALTER TABLE QUA_MC_EQUIPAMENTOS ALTER COLUMN IMAGEM_IT_OPERACIONAL NVARCHAR(MAX);
ALTER TABLE QUA_MC_EQUIPAMENTOS ALTER COLUMN FOTO               NVARCHAR(MAX);
ALTER TABLE QUA_MC_EQUIPAMENTOS ALTER COLUMN FUNCAO             NVARCHAR(MAX);

-- ============================================================
-- ORDEM DE IMPORTAÇÃO DOS DADOS DO ACCESS:
-- 1. QUA_MC_DIC_SECCOES
-- 2. QUA_MC_DIC_RESP_VALIDACAO
-- 3. QUA_MC_DIC_TIPO_CALIBRACAO
-- 4. QUA_MC_DIC_TIPO_ACEITACAO
-- 5. QUA_MC_DIC_TIPO_VERIF_GABARIT
-- 6. QUA_MC_DIC_RESULTADO_VALIDACAO
-- 7. QUA_MC_DIC_PECAS_CROMADAS
-- 8. QUA_MC_ENTIDADES_CALIBRACAO
-- 9. QUA_MC_ENTIDADES_CALIBRACAO_CERTIF
-- 10. QUA_MC_EQUIPAMENTOS
-- 11. QUA_MC_GABARITOS
-- 12. QUA_MC_MAQUINAS
-- 13. QUA_MC_SALAS
-- 14. QUA_MC_MOV_CALIB_EQUIP
-- 15. QUA_MC_MOV_CALIB_EQUIP_DET
-- 16. QUA_MC_MOV_VERIF_GABARITO
-- 17. QUA_MC_MOV_VERIF_INT_GABARITO
-- 18. QUA_MC_MOV_VERIF_MAQUINA
-- 19. QUA_MC_MOV_VERIF_SALA
-- ============================================================
