// Module: QUA
// SGIID Database - Generated from JPA entities + DAO queries
// SQL Server | DataSource: java:jboss/datasources/SGIID

Table QUA_DERROGACOES {
  ID_DERROGACAO int
  DATA_INICIO datetime
  DATA_FIM datetime
  INTERNA_EXTERNA varchar(255)
  EMISSOR int
  UNIDADE int
  SETOR int
  ID_CLIENTE int
  NOME_CLIENTE varchar(255)
  MORADA_CLIENTE varchar(255)
  ETSNUM varchar(255)
  REFERENCIA varchar(255)
  DESIGNACAO_REF varchar(255)
  FAMILIA_REF varchar(255)
  QTD int
  MOTIVO varchar(255)
  CAUSA varchar(255)
  ESTADO varchar(255)
  UTZ_FECHO int
  DATA_FECHO datetime
  UTZ_CRIA int
  DATA_CRIA datetime
  UTZ_ULT_MODIF int
  DATA_ULT_MODIF datetime
  DATA_ANULACAO datetime
  UTZ_ANULACAO int
  PLANO_ACOES bit

}

Table QUA_DERROGACOES_EQUIPA {
  ID int [pk, increment]
  ID_UTZ int
  AREA varchar(255)
  ID_DERROGACAO int
  DATA_CRIA datetime
  UTZ_CRIA int
  DATA_ULT_MODIF datetime
  UTZ_ULT_MODIF int
  EMAIL varchar(255)
  TELEFONE varchar(255)

}

Table QUA_DERROGACOES_FICHEIROS {
  ID int
  TAMANHO float
  NOME varchar(255)
  CAMINHO varchar(255)
  DESCRICAO varchar(255)
  TIPO varchar(255)
  ID_DERROGACAO int
  UTZ_CRIA int
  DATA_CRIA datetime
  UTZ_ULT_MODIF int
  DATA_ULT_MODIF datetime
  DATATYPE varchar(255)
  FICHEIRO_1 varchar(255)
  FICHEIRO_2 varchar(255)

}

Table QUA_DERROGACOES_PLANOS_ACCOES {
  ID int
  RESPONSAVEL int
  DATA_PREVISTA date
  DATA_REAL date
  ID_ACCAO int
  ID_DERROGACAO int
  UTZ_CRIA int
  DATA_CRIA datetime
  UTZ_ULT_MODIF int
  DATA_ULT_MODIF datetime
  TIPO varchar(255)
  TIPO_RESPONSAVEL varchar(255)
  CONCLUIDO_UTZ int
  CONCLUIDO_DATA datetime
  ORDEM int
  OBSERVACOES varchar(255)
  ESTADO varchar(255)
  ID_TAREFA int
  OBRIGA_EVIDENCIAS bit
  AREA varchar(255)

}

Table QUA_DIC_TIPOS_AUDITORIA {
  ID_TIPO_AUDITORIA int
  DESCRICAO varchar(255)
  DATA_CRIA date
  DATA_MODIF date
  DATA_ANULA date
  UTZ_CRIA int
  UTZ_MODIF int
  UTZ_ANULA int
  ATIVO bit

}

Table QUA_DIC_TIPOS_AUDITORIA_QTD_PREVISTA {
  ID int
  ID_TIPO_AUDITORIA int
  ANO int
  QUANTIDADE_MES_1 int
  QUANTIDADE_MES_2 int
  QUANTIDADE_MES_3 int
  QUANTIDADE_MES_4 int
  QUANTIDADE_MES_5 int
  QUANTIDADE_MES_6 int
  QUANTIDADE_MES_7 int
  QUANTIDADE_MES_8 int
  QUANTIDADE_MES_9 int
  QUANTIDADE_MES_10 int
  QUANTIDADE_MES_11 int
  QUANTIDADE_MES_12 int

}

Table QUA_MC_DIC_PECAS_CROMADAS {
  ID_PECA_CROMADA int
  REFERENCIA varchar(255)
  DESIGNACAO varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_DIC_RESP_VALIDACAO {
  ID_RESP_VALIDACAO int
  RESP_VALIDACAO varchar(255)
  DEPARTAMENTO varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_DIC_RESULTADO_VALIDACAO {
  ID_RESULTADO_VALIDACAO int
  RESULTADO_VALIDACAO varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_DIC_SECCOES {
  ID_SECCAO int
  LOCAL_SECCAO varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_DIC_TIPO_ACEITACAO {
  ID_TIPO_ACEITACAO int
  TIPO_ACEIT_CALIB_EQUIP varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_DIC_TIPO_CALIBRACAO {
  ID_TIPO_CALIBRACAO int
  TIPO_CALIB_EQUP varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_DIC_TIPO_VERIF_GABARIT {
  ID_TIPO_VERIF_GABARIT int
  TIPO_VERIF_GABARIT varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_ENTIDADES_CALIBRACAO {
  ID_ENTIDADE_CALIBRACAO int
  NOME_ENTIDADE varchar(255)
  ABREVIATURA varchar(255)
  MORADA varchar(255)
  TELEFONE varchar(255)
  FAX varchar(255)
  EMAIL varchar(255)
  TECNICO varchar(255)
  OBSERVACOES varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_ENTIDADES_CALIBRACAO_CERTIF {
  ID_CERTIF int
  ID_ENTIDADE_CALIBRACAO int
  NUM int
  DATA_CERTIF date
  NUM_CERTIF varchar(255)
  CERTIFICADO varchar(255)
  TIPO_ENSAIO varchar(255)
  VALIDADE date
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_EQUIPAMENTOS {
  ID_EQUIPAMENTO int
  DESIGNACAO varchar(255)
  COD_INTERNO varchar(255)
  N_SERIE varchar(255)
  MODELO varchar(255)
  FABRICANTE varchar(255)
  FORNECEDOR varchar(255)
  FUNCAO varchar(255)
  DATA_AQUISICAO date
  ID_SECCAO int
  ID_RESP_ENTRADA int
  CALIBRACAO_SIM bit
  CALIBRACAO_NAO bit
  CALIBR_INTERNA bit
  CALIBR_EXTERNA bit
  INTERCALIB_INT_MESES int
  INTERCALIB_EXT_MESES int
  ESTUDOS_R_R bit
  FREQ_ESTUDO_R_R int
  EM_UTILIZACAO bit
  OBSOLETO bit
  OBSERVACOES varchar(255)
  ERRO varchar(255)
  GAMA_UTILIZACAO varchar(255)
  NORMAS varchar(255)
  IMAGEM_IT_OPERACIONAL varchar(255)
  FOTO varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_GABARITOS {
  ID_GABARITO int
  NOME_GABARITO varchar(255)
  CODIGO_GABARITO varchar(255)
  COD_DESENHO_TECNICO varchar(255)
  REFERENCIA int
  ID_SECCAO int
  DATA_ENTRADA date
  ID_RESP_ENTRADA int
  EM_UTILIZACAO bit
  OBSOLETO bit
  OBSERVACOES varchar(255)
  FOTOGRAFIA varchar(255)
  G_DIMENSIONAL bit
  G_CONTROLO bit
  G_ISOSTATICO bit
  FREQ_VERIFICACAO_MESES int
  TOLERANCIA decimal(18,4)
  UNID_MEDIDA_TOLERANCIA varchar(255)
  JAN bit
  FEV bit
  MAR bit
  ABR bit
  MAI bit
  JUN bit
  JUL bit
  AGO bit
  SET bit
  OUT bit
  NOV bit
  DEZ bit
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_MAQUINAS {
  ID_MAQUINA int
  DESIGNACAO varchar(255)
  NUM_MAQUINA varchar(255)
  ID_SECCAO int
  PARAMETROS varchar(255)
  TOLERANCIA varchar(255)
  FREQ_VERIFICACAO int
  REL_ANEXO varchar(255)
  VALOR_EXIGIDO varchar(255)
  JAN bit
  FEV bit
  MAR bit
  ABR bit
  MAI bit
  JUN bit
  JUL bit
  AGO bit
  SET bit
  OUT bit
  NOV bit
  DEZ bit
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_MOV_CALIB_EQUIP {
  ID_CALIB_EQUIP int
  ID_EQUIPAMENTO int
  IT_METODO_OPERACIONAL varchar(255)
  IT_CALIBRACAO varchar(255)
  IT_VERIFICACAO_INTERNA varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_MOV_CALIB_EQUIP_DET {
  ID_CALIB_EQUIP_DET int
  ID_CALIB_EQUIP int
  NUM int
  ID_TIPO_CALIBRACAO int
  ID_TIPO_ACEITACAO int
  NUM_CERTIF_EXTERNO varchar(255)
  ANEXO_CERTIF_EXTERNO varchar(255)
  ID_ENTIDADE_CALIBRACAO int
  DATA_CALIBRACAO date
  VALIDADE_CALIBRACAO varchar(255)
  NUM_VALIDADE_CALIBRACAO varchar(255)
  ID_RESP_VALIDACAO int
  ID_RESULTADO_VALIDACAO int
  PERIODO_INTERCALIB_ANTERIOR varchar(255)
  OBSERVACOES varchar(255)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_MOV_VERIF_GABARITO {
  ID_VERIF_GABARITO int
  ID_GABARITO int
  NUM int
  DATA_VERIFICACAO date
  NUM_VERIFICACAO varchar(255)
  REL_VERIFICACAO varchar(255)
  ID_RESP_VERIFICACAO int
  PERIODO_INTERCALIB int
  ID_TIPO_VERIF_GABARIT int
  ID_TIPO_ACEITACAO int
  PERC_R_R float
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_MOV_VERIF_INT_GABARITO {
  ID_VERIF_INT_GABARITO int
  ID_VERIF_GABARITO int
  NUM_MEDIDA int
  TIPO_MEDIDA int
  VALOR decimal(18,4)
  UNIDADES varchar(255)
  TOLERANCIA decimal(18,4)
  REF_SUBFORM decimal(18,4)
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_MOV_VERIF_MAQUINA {
  ID_VERIF_MAQUINA int
  ID_MAQUINA int
  NUM int
  DATA_VERIFICACAO date
  ID_TIPO_VERIFICACAO int
  NUM_VERIFICACAO varchar(255)
  REL_VERIFICACAO varchar(255)
  FREQUENCIA int
  ID_RESP_VERIFICACAO int
  ID_TIPO_ACEITACAO int
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_MOV_VERIF_SALA {
  ID_VERIF_SALA int
  ID_SALA int
  NUM int
  DATA_VERIFICACAO date
  ID_TIPO_VERIFICACAO int
  NUM_VERIFICACAO varchar(255)
  REL_ANEXO varchar(255)
  FREQ_VERIFICACAO varchar(255)
  ID_RESP_VERIFICACAO int
  ID_TIPO_ACEITACAO int
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MC_SALAS {
  ID_SALA int
  DESIGNACAO_ESPACO varchar(255)
  ID_SECCAO int
  PARAMETROS varchar(255)
  RESULTADOS_EXIGIDOS varchar(255)
  OBSERVACOES varchar(255)
  FREQ_TEORICA varchar(255)
  JAN bit
  FEV bit
  MAR bit
  ABR bit
  MAI bit
  JUN bit
  JUL bit
  AGO bit
  SET bit
  OUT bit
  NOV bit
  DEZ bit
  UTZ_CRIA int
  DATA_CRIA date
  UTZ_MODIF int
  DATA_MODIF date
  UTZ_ANULA int
  DATA_ANULA date
  ATIVO bit

}

Table QUA_MOV_AUDITORIAS {
  ID_AUDITORIA int
  ID_TIPO_AUDITORIA int
  ANO int
  DATA_MODIF date
  UTZ_MODIF int
  QUANTIDADE_REALIZADA_MES_1 int
  QUANTIDADE_REALIZADA_MES_2 int
  QUANTIDADE_REALIZADA_MES_3 int
  QUANTIDADE_REALIZADA_MES_4 int
  QUANTIDADE_REALIZADA_MES_5 int
  QUANTIDADE_REALIZADA_MES_6 int
  QUANTIDADE_REALIZADA_MES_7 int
  QUANTIDADE_REALIZADA_MES_8 int
  QUANTIDADE_REALIZADA_MES_9 int
  QUANTIDADE_REALIZADA_MES_10 int
  QUANTIDADE_REALIZADA_MES_11 int
  QUANTIDADE_REALIZADA_MES_12 int

}

// References
Ref: QUA_MC_EQUIPAMENTOS.ID_RESP_ENTRADA > QUA_MC_DIC_RESP_VALIDACAO.ID_RESP_VALIDACAO
Ref: QUA_MC_EQUIPAMENTOS.ID_SECCAO > QUA_MC_DIC_SECCOES.ID_SECCAO
Ref: QUA_MC_GABARITOS.ID_SECCAO > QUA_MC_DIC_SECCOES.ID_SECCAO
Ref: QUA_MC_MAQUINAS.ID_SECCAO > QUA_MC_DIC_SECCOES.ID_SECCAO
Ref: QUA_MC_SALAS.ID_SECCAO > QUA_MC_DIC_SECCOES.ID_SECCAO

Ref: QUA_DERROGACOES_PLANOS_ACCOES.ID_DERROGACAO > QUA_DERROGACOES.ID_DERROGACAO
